# csound-rs

./: .gitignore  .gitmodules  .travis.yml  CNAME  Cargo.toml  README.md  aliases.js  install_csound.sh  search-index.js  settings.html  source-files.js
csound/: all.html  enum.AudioChannel.html  enum.ChannelData.html  enum.ControlChannel.html  enum.FileTypes.html  enum.Language.html  enum.MessageType.html  enum.Status.html  enum.StrChannel.html  index.html  sidebar-items.js  struct.BufferPtr.html  struct.ChannelHints.html  struct.ChannelInfo.html  struct.ChannelPtr.html  struct.CircularBuffer.html  struct.ControlChannelPtr.html  struct.ControlChannelType.html  struct.CsAudioDevice.html  struct.CsMidiDevice.html  struct.Csound.html  struct.FileInfo.html  struct.OpcodeListEntry.html  struct.PvsDataExt.html  struct.RtAudioParams.html  struct.Table.html  trait.GetChannel.html  trait.InputChannelPtr.html  trait.OutputChannelPtr.html  type.RTCLOCK.html
csound-sys/: Cargo.toml  README.md  build.rs
csound-sys/src/: lib.rs
csound/channels/: struct.ChannelHints.html  struct.ChannelPtr.html  struct.PvsDataExt.html  trait.GetChannel.html  trait.InputChannelPtr.html  trait.OutputChannelPtr.html
csound/csound/: struct.BufferPtr.html  struct.CircularBuffer.html  struct.Csound.html
csound/enums/: enum.AudioChannel.html  enum.ChannelData.html  enum.ControlChannel.html  enum.MessageType.html  enum.StrChannel.html
csound/rtaudio/: struct.CsAudioDevice.html  struct.CsMidiDevice.html  struct.RtAudioParams.html
docs/: .rustc_info.json  aliases.js  search-index.js
docs/csound/: CS_AudioDevice.t.html  CS_MidiDevice.t.html  ChannelHints.t.html  CircularBuffer.t.html  ControlChannelType.t.html  Csound.t.html  FileTypes.t.html  RTCLOCK.t.html  RT_AudioParams.t.html  all.html  enum.ChannelData.html  enum.FileTypes.html  enum.Language.html  enum.MessageType.html  enum.Status.html  index.html  sidebar-items.js  struct.CS_AudioDevice.html  struct.CS_MidiDevice.html  struct.ChannelHints.html  struct.ChannelInfo.html  struct.CircularBuffer.html  struct.ControlChannelPtr.html  struct.ControlChannelType.html  struct.Csound.html  struct.FileInfo.html  struct.OpcodeListEntry.html  struct.RT_AudioParams.html  struct.Table.html  struct.pvs_DataExt.html  type.RTCLOCK.html
docs/csound/callbacks/: struct.FileInfo.html
docs/csound/channels/: pvs_DataExt.t.html  struct.ChannelInfo.html  struct.pvs_DataExt.html
docs/csound/csound/: ControlChannelPtr.t.html  OpcodeListEntry.t.html  struct.ControlChannelPtr.html  struct.OpcodeListEntry.html  struct.Table.html
docs/csound/enums/: ChannelData.t.html  enum.FileTypes.html  enum.Language.html  enum.Status.html  struct.ControlChannelType.html
docs/csound/rtaudio/: struct.CS_AudioDevice.html  struct.CS_MidiDevice.html  struct.RT_AudioParams.html
docs/csound_sys/: CSFTYPE_AIFC.v.html  CSFTYPE_AIFF.v.html  CSFTYPE_ATS.v.html  CSFTYPE_AU.v.html  CSFTYPE_AVR.v.html  CSFTYPE_CAF.v.html  CSFTYPE_CVANAL.v.html  CSFTYPE_EXTRACT_PARMS.v.html  CSFTYPE_FLAC.v.html  CSFTYPE_FLOATS_BINARY.v.html  CSFTYPE_FLOATS_TEXT.v.html  CSFTYPE_FTABLES_BINARY.v.html  CSFTYPE_FTABLES_TEXT.v.html  CSFTYPE_HETRO.v.html  CSFTYPE_HETROT.v.html  CSFTYPE_HRTF.v.html  CSFTYPE_HTK.v.html  CSFTYPE_IMAGE_PNG.v.html  CSFTYPE_INTEGER_BINARY.v.html  CSFTYPE_INTEGER_TEXT.v.html  CSFTYPE_IRCAM.v.html  CSFTYPE_LADSPA_PLUGIN.v.html  CSFTYPE_LORIS.v.html  CSFTYPE_LPC.v.html  CSFTYPE_MAT4.v.html  CSFTYPE_MAT5.v.html  CSFTYPE_MIDI_SYSEX.v.html  CSFTYPE_MPC2K.v.html  CSFTYPE_NIST.v.html  CSFTYPE_OGG.v.html  CSFTYPE_OPTIONS.v.html  CSFTYPE_ORCHESTRA.v.html  CSFTYPE_ORC_INCLUDE.v.html  CSFTYPE_OTHER_BINARY.v.html  CSFTYPE_OTHER_TEXT.v.html  CSFTYPE_PAF.v.html  CSFTYPE_POSTSCRIPT.v.html  CSFTYPE_PVC.v.html  CSFTYPE_PVCEX.v.html  CSFTYPE_PVF.v.html  (+869 more)
docs/src/bitflags/: lib.rs.html
docs/src/csound/: callbacks.rs.html  channels.rs.html  csound.rs.html  enums.rs.html  handler.rs.html  lib.rs.html  rtaudio.rs.html
docs/src/csound_sys/: lib.rs.html
docs/src/libc/: dox.rs.html  lib.rs.html  macros.rs.html
examples/: Cargo.toml  example1.rs  example2.rs  example3.rs  example4.rs  example5.rs
examples/example10/: Cargo.toml
examples/example10/src/: main.rs
examples/example5/: Cargo.toml
examples/example5/src/: main.rs
examples/example6/: Cargo.toml
examples/example6/src/: main.rs
examples/example7/: Cargo.toml
examples/example7/src/: main.rs
examples/example8/: Cargo.toml
examples/example8/src/: main.rs
examples/example9/: Cargo.toml
examples/example9/src/: main.rs
examples/src/: example1.rs  example10.rs  example2.rs  example3.rs  example4.rs  example5.rs  example6.rs  example7.rs  example8.rs  example9.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Ord.js  trait.PartialEq.js  (+1 more)
implementors/csound/: trait.InputChannelPtr.js
src/: callbacks.rs  channels.rs  csound.rs  enums.rs  handler.rs  lib.rs  rtaudio.rs
src/csound/: callbacks.rs.html  channels.rs.html  csound.rs.html  enums.rs.html  lib.rs.html  rtaudio.rs.html
(+70 files in other folders)
