[package]
name = "csound"
version = "0.1.0"
authors = ["Natanael Mojica <neithanmo@gmail.com"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["multimedia::audio", "api-bindings"]
repository = "https://github.com/neithanmo/csound-rs"
#documentation = "https://docs.rs/csound"
description = """
Raw bindings to libcsound64
High level Rust bindings are available in the `csound` crate
"""
[lib]
crate-type = ["rlib"]

[dependencies]
csound-sys = {path = "csound-sys", version = "0.1.0"}
libc = "0.2"
bitflags = "1.0.4"

[badges]
travis-ci = { repository = "neithanmo/csound-rs" }


# --------------------------- examples

[[example]]
name = "example1"
path = "examples/example1.rs"

[[example]]
name = "example2"
path = "examples/example2.rs"

[[example]]
name = "example3"
path = "examples/example3.rs"

[[example]]
name = "example4"
path = "examples/example4.rs"


[[example]]
name = "example5"
path = "examples/example5.rs"
