[package]
name = "csound-sys"
version = "0.1.1"
license = "MIT/Apache-2.0"
readme = "README.md"
authors = ["Natanael Mojica <neithanmo@gmail.com>"]
links = "csound64"
build= "build.rs"
description = "Native bindings to the libcsound64 library"
categories = ["multimedia::audio", "api-bindings"]
repository = "https://github.com/neithanmo/csound-rs"

[dependencies]
libc = "0.2"
